--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     ci: 
       runs-on: ubuntu-latest 
       steps: # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it - 
-      uses: actions/checkout@v2 - 
+      uses: actions/checkout@v2
       name: LS 
       run: ls
