--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,10 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Setup PHP, extensions and composer with shivammathur/setup-php uses: shivammathur/setup-php@v2
-        with:
-          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, iconv, json, mbstring, pdo
+    - name: Setup PHP, extensions and composer with shivammathur/setup-php 
+      uses: shivammathur/setup-php@v2
+      with:
+        extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, iconv, json, mbstring, pdo
       
       - name: LS 
       run: ls
