--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, iconv, json, mbstring, pdo
-         - name: Cache
-      uses: actions/cache@v3.3.2
-      with:
+        name: Cache
+    uses: actions/cache@v3.3.2
+    with:
         # A list of files, directories, and wildcard patterns to cache and restore
         path: 
         # An explicit key for restoring and saving the cache
@@ -32,5 +32,5 @@ jobs:
         # Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache
         lookup-only: # optional, default is false
           
-    - name: LS 
-      run: ls
+        name: LS 
+        run: ls
