--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-# cd.yaml
-# Marco El Loco
+# cd.yaml 
 name: Pipeline-CI 
 on: 
   push: 
@@ -7,21 +6,46 @@ on:
 jobs: 
   ci: 
     runs-on: ubuntu-latest 
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    steps: 
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it 
     - uses: actions/checkout@v2
-
+      # https://github.com/shivammathur/setup-php (community) 
     - name: Setup PHP, extensions and composer with shivammathur/setup-php 
-      uses: shivammathur/setup-php@v2
-      with:
+      uses: shivammathur/setup-php@v2 
+      with: 
         extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, iconv, json, mbstring, pdo
-    - name: Cache
+    - name: Cache multiple paths 
       uses: actions/cache@v3.3.2
-      
       with:
-        # A list of files, directories, and wildcard patterns to cache and restore
-        path: vendor 
-        # An explicit key for restoring and saving the cache
-        key: ${{ runner.os }}-${{ hashFiles('composer.lock') }} 
-        # name: LS 
-        # run: ls
+        path:
+          vendor
+        key: ${{ runner.os }}-${{ hashFiles('composer.lock') }}
+    - name: "Composer install" 
+      run: composer install --no-interaction --no-progress  
+ 
+    # Install Symfony CLI 
+    - name: Symfony CLI 
+      run: | 
+        curl -sS https://get.symfony.com/cli/installer | bash 
+        mv /home/runner/.symfony5/bin/symfony /usr/local/bin/symfony 
+    # Check vulnerabilities 
+    - name: Symfony Check Vulnerabilities 
+      run: symfony check:security
+      continue-on-error: true
+ 
+    # PHP CS FIXER 
+    - name: PHP-CS-Fixer 
+      run: 
+        composer require friendsofphp/php-cs-fixer
+        ./vender/bin/php-cs-fixer fix --dry-run
+      continue-on-error: true
+ 
+    # PHP STAN
+    - name: PHP Stan
+      run: |
+        ./vendor/bin/simple-phpunit install
+        composer require phpstan/phpstan
+        composer require phpstan/extension-installer
+        composer require phpstan/phpstan-symfony
+        ./vendor/bin/phpstan analyse src --memory-limit 1G
+      continue-on-error: true
